--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,4 +1,10 @@
 smile_hipay_sylius_plugin:
+    validation:
+        customer:
+            phoneNumber:
+                not_blank: Le téléphone ne doit pas être vide
+            birthday:
+                not_blank: La date de naissance ne doit pas être vide
     ui:
         hipay_gateway_label: Paiement Hipay
         hipay_moto_gateway_label: Paiement Hipay Mo/To
