--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -2,6 +2,8 @@ smile_hipay_sylius_plugin:
     customer:
         phoneNumber:
             not_blank: Le téléphone ne doit pas être vide
+            regexp: |
+                Le format de téléphone doit être le suivant: (+33)6xxxxxxxx ou 06xxxxxxxx (espaces ou tirets autorisés)
         birthday:
             not_blank: La date de naissance ne doit pas être vide
             underage: Vous devez avoir au moins 18 ans
